--- a/style/index.css
+++ b/style/index.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #F4F7FA;
+    background-color: #ffffff;
     color: #333;
 }
 
@@ -49,11 +49,10 @@ nav ul li a {
     text-decoration: none;
     color: #FFFFFF;
     font-weight: bold;
-    transition: color 0.3s;
 }
 
 nav ul li a:hover {
-    color: #FFD700;
+    color: #00ff00;
 }
 
 input[type="search"] {
@@ -61,31 +60,31 @@ input[type="search"] {
     border: 1px solid #0056b3;
     border-radius: 3px;
     margin-left: 20px;
-    outline: none;
-
 }
 
 input[type="search"]:focus {
-    border-color: #FFD700;
+    border-color: #ff0000;
 }
 
 main {
-    max-width: auto;
-    margin: auto;
-    padding: 20px;
     background-color: #dce0e4;
-   
-    border-radius: 5px;
+
 }
 
- h1  {
-    text-align: center;
-    font-size: 20 px;
-    color: #5989c0;
-    margin-bottom: 20px;
+ h1 ,h3 {
+    text-align: center; 
+    color: #0d6ddb;
+    margin-bottom: 15px;
 }
 
-
+h2 {  
+    color: #c43a3a;
+    margin-bottom: 15px;
+}
+h5{
+    margin-bottom: 15px;
+    text-align: center
+}
 .content-container {
     display: flex;
     justify-content: space-between;
@@ -96,7 +95,6 @@ section {
     background-color: #a6c6db;
     padding: 20px;
     border: 1px solid #DDDDDD;
-    border-radius: 5px;
     flex: 1;
     text-align: center;
 }
@@ -104,16 +102,11 @@ section {
 .content-image {
     max-width: 100%;
     height: auto;
-    margin-bottom: 15px;
+    margin-bottom: 5px;
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-section h2 {
-    font-size: 25px;
-    color: #36444d;
-    margin-bottom: 15px;
-}
+
 
 section p {
     font-size: 1rem;
@@ -126,30 +119,26 @@ button {
     color: #FFFFFF;
     border: none;
     padding: 10px 20px;
-    border-radius: 3px;
     cursor: pointer;
-    transition: background-color 0.3s;
 }
 
 button:hover {
-    background-color: #218838;
+    background-color: #f90000;
 }
 
 .products {
-    margin-top: 20px;
-    padding: 20px;
-    background-color: #F9F9F9;
+    margin-top: 10px;
+    padding: 10px;
+    background-color:#f1f4f7;
     border: 1px solid #DDDDDD;
     border-radius: 5px;
     text-align: center;
-    color: #6C757D;
+    color: #1364b5;
 }
 
 footer {
-    background-color: hwb(211 29% 20%);
-    border-top: 1px solid #0056b3;
-    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
-    padding: 10px 20px;
+    background-color: hwb(211 39% 15%);
+    padding: 10px 10px;
     text-align: center;
     margin-top: 20px;
 }
@@ -159,7 +148,6 @@ footer a {
     color: #FFFFFF;
     margin: 0 10px;
     font-weight: bold;
-    transition: color 0.3s;
 }
 
 
